# g923-mac

./: CMakeLists.txt  README.md  flt.cpp  g923mac.cpp  plugin.cpp
include/: command.hpp  device.hpp  types.hpp  util.hpp  wheel.hpp
include/flt/: command.hpp  device.hpp  types.hpp  util.hpp
include/g923mac/: command.hpp  device.hpp  force_feedback_config.hpp  types.hpp  util.hpp  wheel.hpp
include/uti/algo/: advance.hpp  copy.hpp  distance.hpp  mem.hpp  swap.hpp
include/uti/allocator/: default.hpp  freelist_resource.hpp  meta.hpp
include/uti/container/: buffer.hpp  meta.hpp  new_packed_vector.hpp  packed_vector.hpp  segment_tree.hpp  vector.hpp  view.hpp
include/uti/iterator/: base.hpp  meta.hpp
include/uti/meta/: join.hpp  list.hpp  random.hpp
include/uti/string/: string.hpp
include/uti/type/: common_ref.hpp  ref_wrap.hpp  traits.hpp
include/uti/util/: config.hpp  copy_counter.hpp
source/: command.cpp  device.cpp  util.cpp
